# users-task

./: .env.local  .gitignore  README.md  build.sh  collectstatic.sh  export.sh  pyproject.toml  pyvenv.cfg  requirements-dev.txt  requirements.txt  run.sh  superuser.sh  vercel.json
backend/: db.py  settings.py  urls.py  utils.py
user/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_mob_num_alter_user_pan_num_and_more.py  0003_alter_user_mob_num_alter_user_pan_num.py  0004_manager_active_alter_user_mob_num.py  0005_remove_manager_active_manager_is_active.py
