[tool.poetry]
name = "users-task"
version = "0.1.0"
description = "A User Manager app in django and Postgres"
authors = ["Arvind <pingarvindforquestions@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=4.2,<4.3"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.1"
whitenoise = "^6.6.0"


[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.12.1"
black = "^24.4.2"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
